[package]
name = "jellyfish"
version = "1.1.0"
edition = "2021"
description = "Approximate and phonetic matching of strings."
authors = ["James Turk <dev@jamesturk.net>"]
repository = "https://github.com/jamesturk/jellyfish/"
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jellyfish"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = [] }
unicode-segmentation = "^1.6.0"
unicode-normalization = "^0.1"
smallvec = "^1.13"
ahash = "^0.8"
num-traits = "0.2.19"

[dev-dependencies]
csv = "1.1"

[features]
python = []
