[build-system]
requires = ["maturin>=0.14,<2"]
build-backend = "maturin"

[project]
name = "jellyfish"
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
]

[project.urls]
homepage = "https://jamesturk.github.io/jellyfish/"
documentation = "https://jamesturk.github.io/jellyfish/"
repository = "https://github.com/jamesturk/jellyfish/"


[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python"
module-name = "jellyfish._rustyfish"
